# coding-the-matrix

./: README.md  coding-the-matrix.cabal  stack.yaml
src/: ComplexLab.hs  ComprehensionLab.hs  DictUtil.hs  InverseIndexLab.hs  Lab.hs  Main.hs  TheField.hs
src/TheField/: Image.hs  Plot.hs  Problems.hs  README.md
