name:                coding-the-matrix
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Dan Brooks
maintainer:          dmbrooks@live.co.uk
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  build-depends:       base
                     , containers
                     , random
  exposed-modules:     Lab
                     , InverseIndexLab
                     , ComprehensionLab
                     , DictUtil
  default-language:    Haskell2010
  ghc-options:         -Wall -O3

