name:                coding-the-matrix
version:             0.1.0.0
license:             MIT
license-file:        LICENCE
author:              Dan Brooks
maintainer:          dmbrooks@live.co.uk
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  build-depends:       base
                     , containers
                     , random
                     , Chart
                     , Chart-cairo
                     , vector
                     , friday
                     , friday-devil
  exposed-modules:     Lab
                     , InverseIndexLab
                     , ComprehensionLab
                     , DictUtil
                     , ComplexLab
                     , TheField
                     , TheField.Image
                     , TheField.Plot
                     , TheField.Problems
  default-language:    Haskell2010
  ghc-options:         -Wall -O3

